--- a/docs/adv_mrc/assets/beaker.plist
+++ b/docs/adv_mrc/assets/beaker.plist
@@ -11,7 +11,7 @@
                     <key>kind</key>
                     <string>software-package</string>
                     <key>url</key>
-                    <string>https://mojotest.com/~thalsteadokeyemi/adv_mrc/assets/beaker.ipa</string>
+                    <string>https://demo.testmyads.com/adv_mrc/assets/Beaker.ipa</string>
                 </dict>
                 <dict>
                     <key>kind</key>
